# iuextract

./: .gitignore  README.md  auto_seg_analysis.py  deployment_info.md  example.ipynb  pyproject.toml  segmentation_test.py  setup.py
scripts/: auto_seg_analysis.py  gold_v_gold_analysis.py
src/iuextract/: __main__.py  data.py  extract.py  gold.py  iu_utils.py  utils.py
src/iuextract/utils/: gold.py
tests/: segmentation_test.py  test.ipynb
utils/: gold.py  statistics.py
